# fast-prototyping-rag

./: .dockerignore  .gitignore  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: python-tests.yml
src/rag/api/: Dockerfile  main.py
src/rag/api/routes/: rag.py
src/rag/core/: elastic_client.py  generator.py  retrieval.py
src/rag/ui/: Dockerfile  app.py
src/rag/utils/: config.py
tests/: test_api.py
tests/test_core/: test_generator.py
tests/test_utils/: test_config.py
