[project]
name = "rag"
version = "0.1.0"
description = ""
authors = [
    {name = "Mouhamadou Bamba DIOP [ext_diop004907 DRPS/PEX/SDN/SSD]",email = "MouhamadouBamba.DIOP@orange-sonatel.com"}
]
readme = "README.md"
requires-python = ">=3.11.9"
dependencies = [
    "fastapi >=0.115.0",
    "uvicorn[standard] >=0.30.0",
    "streamlit >=1.38.0",
    "elasticsearch >=8.15.1",
    "python-dotenv >=1.0.1",
    "sentence-transformers >=3.0.1",
    "numpy >=1.26.4",
    "pandas >=2.2.3",
    "openai >=1.51.0",
    "httpx >=0.27.2",
    "pytest >= 8.3.2",
    "black >= 24.8.0",
    "ruff >= 0.6.9",
    "requests (>=2.32.5,<3.0.0)",
    "watchdog (>=6.0.0,<7.0.0)"
]

[tool.poetry]
packages = [{include = "rag", from = "src"}]


[tool.poetry.group.dev.dependencies]
pytest-cov = "^7.0.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"